--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
   "dependencies": {
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
-    "@mui/icons-material": "5.15.19",
-    "@mui/material": "5.15.19",
+    "@mui/material": "^7.1.1",
+    "@mui/icons-material": "^7.1.1",
     "@mui/material-nextjs": "^7.1.1",
-    "@mui/styles": "5.15.19",
     "axios": "^1.9.0",
     "next": "15.3.3",
     "react": "^19.0.0",
