--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
-    "@mui/material": "^7.1.1",
     "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
     "@mui/material-nextjs": "^7.1.1",
     "axios": "^1.9.0",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-content-loader": "^7.0.2",
+    "react-dom": "^19.0.0",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
